# flask-starter

./: .editorconfig  .gitignore  Dockerfile  Makefile  Pipfile  README.md  cookiecutter.json  docker-compose.yaml  requirements.txt  tests.py
.github/workflows/: build.yml  pr.yml
{{cookiecutter.project_slug}}/: .env.dist  .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
{{cookiecutter.project_slug}}/.githooks/: pre-commit
{{cookiecutter.project_slug}}/core/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  entrypoint.sh  models.py  pyproject.toml  tests.py
{{cookiecutter.project_slug}}/core/tests/: conftest.py  factories.py  test_create_user.py  test_index.py  test_post.py  test_user.py
{{cookiecutter.project_slug}}/flask/: Pipfile  app.py  config.py  tests.py
