[tool.poetry]
name = "flask-starter"
version = "0.1.0"
description = "Poetry Environment for Flask-Starter"
authors = ["Cristian Angulo <cristian@nietzscheson.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
Flask = "2.0.3"
psycopg2 = "2.9.3"
Flask-SQLAlchemy = "2.5.1"
Flask-Migrate = "3.1.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
